# book-data-platform

./: .gitignore  README.md  app.py  pyproject.toml
data/sample/: openlibrary_sample_100.parquet
src/api/: main.py  schemas.py
src/embedding/: embed_books.py  prepare_embedding_input.py
src/ingestion/: enrich_descriptions.py  openlibrary.py
src/quality/: silver_quality.py
src/retrieval/: build_faiss_index.py  engine.py  query_similar.py
src/transformation/: join_books_text.py  silver_duckdb.py  silver_openlibrary.py
